[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Web Client library that facilitates interaction with the Miden network"
documentation          = "https://docs.rs/miden-client-web"
edition.workspace      = true
keywords               = ["client", "miden", "wasm", "web"]
license.workspace      = true
name                   = "miden-client-web"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[features]
testing = ["miden-client/testing"]

[dependencies]
# Workspace dependencies
idxdb-store     = { package = "miden-idxdb-store", path = "../idxdb-store" }
miden-client    = { default-features = false, features = ["testing", "tonic"], path = "../rust-client" }
miden-protocol  = { workspace = true }
miden-standards = { workspace = true }

# External dependencies
console_error_panic_hook = { version = "0.1.7" }
hex = { version = "0.4" }
js-sys = { version = "0.3" }
rand = { workspace = true }
serde-wasm-bindgen = { version = "0.6" }
thiserror.workspace = true
wasm-bindgen = { features = [
  "serde-serialize",
], version = "=0.2.105" } # Lock version as .106 removed doc generation for structs
wasm-bindgen-futures = { version = "0.4" }

[dev-dependencies]
web-sys = { features = ["console"], version = "0.3" }

[lints]
workspace = true
