[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Web Client library that facilitates interaction with the Miden network"
documentation          = "https://docs.rs/miden-client-web"
edition.workspace      = true
keywords               = ["client", "miden", "wasm", "web"]
license.workspace      = true
name                   = "miden-client-web"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["wasm"]
testing = ["miden-client/testing"]

wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:idxdb-store",
    "miden-client/testing",
    "miden-client/tonic",
]
napi = [
    "dep:napi",
    "dep:napi-derive",
    "dep:napi-build",
    "dep:tokio",
    "dep:miden-client-sqlite-store",
    "miden-client/std",
    "miden-client/tonic",
]

[dependencies]
# Workspace dependencies (always needed)
miden-client    = { workspace = true }
miden-protocol  = { workspace = true }
miden-standards = { workspace = true }
miden-bindings-macro = { path = "../bindings-macro" }

# External dependencies (always needed)
hex       = { version = "0.4" }
rand      = { workspace = true }
thiserror = { workspace = true }

# WASM-only (optional)
idxdb-store              = { workspace = true, optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys                   = { version = "0.3", optional = true }
serde-wasm-bindgen       = { version = "0.6", optional = true }
wasm-bindgen             = { version = "=0.2.105", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures     = { version = "0.4", optional = true }

# napi-only (optional)
napi                      = { version = "2", default-features = false, features = ["async", "napi8", "tokio_rt"], optional = true }
napi-derive               = { version = "2", optional = true }
tokio                     = { workspace = true, optional = true }
miden-client-sqlite-store = { workspace = true, optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
web-sys = { features = ["console"], version = "0.3" }

[lints]
workspace = true
