[package]
edition                = "2024"
name                   = "miden-client-unit-tests"
publish                = false
rust-version.workspace = true
version.workspace      = true

[dev-dependencies]
anyhow                    = { workspace = true }
miden-agglayer            = { features = ["testing"], workspace = true }
miden-client              = { features = ["std", "testing"], workspace = true }
miden-client-sqlite-store = { workspace = true }
miden-protocol            = { default-features = false, features = ["testing"], workspace = true }
miden-standards           = { features = ["testing"], workspace = true }
miden-testing             = { default-features = false, workspace = true }
miden-tx                  = { workspace = true }
rand                      = { workspace = true }
serde                     = { workspace = true }
serde_json                = { workspace = true }
tokio                     = { workspace = true }

[lints]
workspace = true
