[package]
authors.workspace      = true
description            = "Generates genesis fixtures for bootstrapping a Miden client testing node. NOT for production use."
edition.workspace      = true
keywords               = ["miden", "node", "genesis", "testing"]
license.workspace      = true
name                   = "node-builder"
publish                = false
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[[bin]]
name = "gen-genesis"
path = "src/bin/gen-genesis.rs"

[dependencies]
# Miden dependencies
# `std` is needed for `AccountFile::write`; the workspace pins these with default features off.
miden-node-utils = { features = ["testing", "tracing-forest"], workspace = true }
miden-protocol   = { features = ["std"], workspace = true }
miden-standards  = { features = ["std"], workspace = true }

# External dependencies
anyhow      = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
test    = false
