[package]
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
name                   = "testing-remote-prover"
publish                = false
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
# Miden dependencies
miden-node-proto = { workspace = true }
miden-node-utils = { workspace = true }
miden-protocol   = { features = ["std"], workspace = true }
miden-tx         = { features = ["concurrent", "std"], workspace = true }

# External dependencies
anyhow             = { workspace = true }
async-trait        = { workspace = true }
tokio              = { features = ["net"], workspace = true }
tokio-stream       = { features = ["net"], version = "0.1" }
tonic              = { default-features = false, features = ["router", "transport"], version = "0.14" }
tonic-web          = { version = "0.14" }
tracing            = { version = "0.1" }
tracing-subscriber = { features = ["env-filter", "fmt", "json"], version = "0.3" }

[lints]
workspace = true
